--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -141,12 +141,10 @@
                 <select id="dashboard-reasoning-select" title="Reasoning"></select>
               </div>
               <div class="actions">
-                <button id="start-run" class="primary">Start</button>
-                <button id="start-once">Once</button>
-                <button id="stop-run" class="ghost">Stop</button>
-                <button id="resume-run" class="ghost">Resume</button>
-                <button id="kill-run" class="danger">Kill</button>
-                <button id="reset-runner" class="ghost" title="Reset run ID, clear logs">Reset</button>
+                <button id="start-run" class="primary" title="Run a full autorunner iteration through all tasks">Start</button>
+                <button id="stop-run" class="ghost" title="Gracefully stop the current run (safe shutdown)">Stop</button>
+                <button id="kill-run" class="danger" title="Immediately terminate the run (force stop - may cause data loss)">Kill</button>
+                <button id="reset-runner" class="ghost" title="Clear run state and restart fresh (destructive)">Reset</button>
                 <button id="refresh-state" class="ghost icon-btn" title="Refresh state">↻</button>
               </div>
               <p class="muted small" id="runner-pid">PID: –</p>
