Fix #308: Prevent infinite autorunner loops with robust TODO parsing and safety stops
- Add robust Markdown TODO parsing that ignores code fences and HTML comments
- Add no-progress stop condition to prevent token burn when stuck
- Add user-configurable max runs limit in UI
- Support both - [ ] and * [ ] checkbox patterns
- Add comprehensive unit tests for TODO parsing edge cases

This implements the three-layered approach from issue #308:
1. Robust Markdown TODO parsing matching rendered checkboxes
2. No-progress safety stop (configurable threshold, default 3)
3. Max runs UI configuration for explicit safety brake

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -893,6 +893,11 @@
                 <label for="autorunner-sandbox-select" class="muted small">Sandbox</label>
                 <select id="autorunner-sandbox-select"></select>
               </div>
+              <div>
+                <label for="autorunner-max-runs-input" class="muted small">Max runs</label>
+                <input id="autorunner-max-runs-input" type="number" min="1" step="1" placeholder="Unlimited" />
+                <span class="form-hint">Maximum number of autorunner cycles (empty = unlimited)</span>
+              </div>
             </div>
             <div id="autorunner-network-row" class="settings-toggle-row">
               <label class="form-checkbox">
