Fix ticket flow leaks and controls

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -572,6 +572,7 @@
 </div>
 <div class="ticket-flow-actions">
 <button class="primary sm" id="ticket-flow-bootstrap">Start Ticket Flow</button>
+<button class="ghost sm" id="ticket-flow-stop">Stop</button>
 <button class="ghost sm" id="ticket-flow-resume">Resume</button>
 <button class="ghost sm icon-btn" id="ticket-flow-refresh" title="Refresh ticket flow">↻</button>
 </div>
