Make tickets the default repo tab

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -605,8 +605,10 @@
 </div>
 <div class="runs-todo-list" id="runs-todo-list">No TODOs yet.</div>
 </div>
-</div>
-</section><div class="panel" id="tickets"><h2>Tickets</h2><div class="card ticket-card" id="ticket-card">
+</section>
+<section class="panel active" id="tickets">
+<h2>Tickets</h2>
+<div class="card ticket-card" id="ticket-card">
 <div class="card-header">
 <div class="card-header-left ticket-header-left">
 <span class="label">Ticket Flow</span>
