Remove Legacy PR/GitHub/Autorunner Paths - Make Ticket Flow Canonical (#379)

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -168,23 +168,6 @@
 <p class="metric" id="last-exit-code">–</p>
 </div>
 </div>
-<details class="legacy-runner" id="runner-controls">
-  <summary>Legacy autorunner controls</summary>
-  <div class="doc-agent-controls dashboard-agent-controls">
-    <select id="dashboard-agent-select" title="Agent"></select>
-    <select id="dashboard-model-select" title="Model"></select>
-    <select id="dashboard-reasoning-select" title="Reasoning"></select>
-  </div>
-  <div class="actions">
-    <button class="primary" id="start-run" title="Run a full autorunner iteration through all tasks">Start</button>
-    <button class="ghost" id="stop-run" title="Gracefully stop the current run (safe shutdown)">Stop</button>
-    <button class="danger" id="kill-run" title="Immediately terminate the run (force stop - may cause data loss)">Kill</button>
-    <button class="ghost hidden" id="clear-lock" title="Clear a stale autorunner lock">Clear lock</button>
-    <button class="ghost" id="reset-runner" title="Clear run state and restart fresh (destructive)">Reset</button>
-    <button class="ghost icon-btn" id="refresh-state" title="Refresh state">↻</button>
-  </div>
-  <p class="muted small" id="runner-pid">PID: –</p>
-</details>
 </div>
 <div class="card usage-card-compact">
 <div class="usage-header">
@@ -256,226 +239,9 @@
 </div>
 <ul class="checklist" id="todo-preview-list"></ul>
 </div>
-<div class="card github-card" id="github-card">
-<div class="card-header">
-<span class="label">GitHub</span>
-<span class="pill pill-idle" id="github-status-pill">–</span>
-</div>
-<div class="github-grid">
-<div class="github-row">
-<span class="muted">Repo</span>
-<a class="github-link muted" id="github-repo-link">–</a>
-</div>
-<div class="github-row">
-<span class="muted">Branch</span>
-<span class="github-mono" id="github-branch">–</span>
-</div>
-<div class="github-row">
-<span class="muted">Issue</span>
-<a class="github-link muted" id="github-issue-link">–</a>
-</div>
-<div class="github-row">
-<span class="muted">PR</span>
-<span class="github-pr-group">
-<a class="github-link muted" id="github-pr-link">–</a>
-<button class="ghost icon-btn-inline" disabled="" id="github-open-pr-files" title="View changed files">📄</button>
-<button class="ghost icon-btn-inline" disabled="" id="github-copy-pr" title="Copy PR link">📋</button>
-</span>
-</div>
-</div>
-<div class="actions github-actions">
-<button class="primary sm" id="github-sync-pr">Sync PR</button>
-</div>
-<div class="github-flow">
-<div class="github-flow-header">
-<span class="muted">PR Flow</span>
-<span class="pill pill-idle" id="pr-flow-status">–</span>
-</div>
-<div class="github-flow-grid">
-<label class="muted" for="pr-flow-mode">Mode</label>
-<select id="pr-flow-mode">
-<option value="issue">Implement Issue → PR</option>
-<option value="pr">Fix Existing PR</option>
-</select>
-<label class="muted" for="pr-flow-ref">Issue / PR</label>
-<input autocomplete="off" id="pr-flow-ref" placeholder="#123 or https://github.com/org/repo/issues/123" spellcheck="false" type="text"/>
-<label class="muted" for="pr-flow-base">Base</label>
-<input autocomplete="off" id="pr-flow-base" placeholder="default" spellcheck="false" type="text"/>
-<label class="muted" for="pr-flow-until">Until</label>
-<select id="pr-flow-until">
-<option value="no_issues">No issues</option>
-<option value="minor_only">Minor only</option>
-</select>
-<label class="muted" for="pr-flow-cycles">Max cycles</label>
-<input id="pr-flow-cycles" min="1" placeholder="3" type="number"/>
-<label class="muted" for="pr-flow-runs">Impl runs</label>
-<input id="pr-flow-runs" min="1" placeholder="auto" type="number"/>
-<label class="muted" for="pr-flow-timeout">Timeout (s)</label>
-<input id="pr-flow-timeout" min="0" placeholder="auto" type="number"/>
-<label class="muted" for="pr-flow-draft">Draft</label>
-<input checked="" id="pr-flow-draft" type="checkbox"/>
-</div>
-<div class="actions github-flow-actions">
-<button class="primary sm" id="pr-flow-start">Start</button>
-<button class="ghost sm" id="pr-flow-stop">Stop</button>
-<button class="ghost sm" id="pr-flow-resume">Resume</button>
-</div>
-<div class="github-flow-status">
-<div class="github-flow-row">
-<span class="muted">Step</span>
-<span class="github-mono" id="pr-flow-step">–</span>
-</div>
-<div class="github-flow-row">
-<span class="muted">Cycle</span>
-<span class="github-mono" id="pr-flow-cycle">–</span>
-</div>
-<div class="github-flow-row">
-<span class="muted">Feedback</span>
-<span class="github-mono" id="pr-flow-review">–</span>
-</div>
-</div>
-<div class="github-flow-artifacts">
-<a class="github-link muted" id="pr-flow-spec-link">Spec</a>
-<a class="github-link muted" id="pr-flow-progress-link">Progress</a>
-<a class="github-link muted" id="pr-flow-patch-link">Patch diff</a>
-<a class="github-link muted" id="pr-flow-logs-link">Logs</a>
-<a class="github-link muted" id="pr-flow-final-link">Final report</a>
-</div>
-</div>
-<p class="muted small" id="github-note">–</p>
-</div>
 </div>
 
-<div class="card review-card" id="review-card">
-<div class="card-header">
-<span class="label">Review</span>
-<span class="pill pill-idle" id="review-status-pill">–</span>
-</div>
-<div class="review-grid">
-<div class="review-row">
-<span class="muted">Run ID</span>
-<span class="review-mono" id="review-run-id">–</span>
-</div>
-<div class="review-row">
-<span class="muted">Started</span>
-<span class="review-mono" id="review-started">–</span>
-</div>
-<div class="review-row">
-<span class="muted">Finished</span>
-<span class="review-mono" id="review-finished">–</span>
-</div>
-</div>
-<div class="review-controls">
-<div class="review-inputs">
-<div class="review-input-row">
-<label class="muted" for="review-agent">Agent</label>
-<input id="review-agent" spellcheck="false" type="text" value="opencode"/>
-</div>
-<div class="review-input-row">
-<label class="muted" for="review-model">Model</label>
-<input id="review-model" spellcheck="false" type="text" value="zai-coding-plan/glm-4.7"/>
-</div>
-<div class="review-input-row">
-<label class="muted" for="review-reasoning">Reasoning</label>
-<input id="review-reasoning" placeholder="auto" spellcheck="false" type="text"/>
-</div>
-<div class="review-input-row">
-<label class="muted" for="review-timeout">Timeout (s)</label>
-<input id="review-timeout" min="60" placeholder="auto" spellcheck="false" type="number"/>
-</div>
-</div>
-<div class="review-buttons">
-<button class="primary sm" id="review-start">Start</button>
-<button class="ghost sm" id="review-stop">Stop</button>
-<button class="ghost sm" id="review-reset">Reset</button>
-</div>
-</div>
-<div class="review-artifacts">
-<a class="review-link muted" id="review-final-link">Final report</a>
-<a class="review-link muted" id="review-log-link">Log</a>
-<a class="review-link muted" id="review-scratchpad-link">Scratchpad</a>
-</div>
-</div>
-<div class="analytics-subsection" id="analytics-runs">
-<div class="inline-toolbar runs-toolbar">
-<button class="primary sm" id="runs-refresh">Refresh</button>
-<label>
-              Attribution
-              <select id="runs-attribution-mode">
-<option value="split">Split (default)</option>
-<option value="full">Full (upper bound)</option>
-</select>
-</label>
-<label>
-              TODO filter
-              <input id="runs-todo-search" placeholder="Search TODOs" type="text"/>
-</label>
-</div>
-<div class="runs-layout">
-  <div class="runs-card">
-    <div class="runs-card-header">
-      <span class="label">Runs</span>
-    </div>
-    <table class="runs-table">
-      <thead>
-        <tr>
-          <th>Run</th>
-          <th>Status</th>
-          <th>Started</th>
-          <th>Duration</th>
-          <th>Model</th>
-          <th>Tokens</th>
-          <th>Completed TODOs</th>
-        </tr>
-      </thead>
-      <tbody id="runs-table-body"></tbody>
-</table>
-</div>
-<div class="runs-card">
-<div class="runs-card-header runs-card-header-inline">
-<span class="label">Tokens per TODO</span>
-<span class="muted small" id="runs-todo-summary">–</span>
-</div>
-<div class="runs-todo-list" id="runs-todo-list">No TODOs yet.</div>
-</div>
-</div>
-</div>
-<details class="analytics-logs" id="analytics-logs">
-<summary id="analytics-logs-toggle">Logs</summary>
-<div class="inline-toolbar">
-<label class="chip" data-short="Sum">
-<input checked="" id="log-show-summary" type="checkbox"/>
-<span>Summary</span>
-</label>
-<label>Run <input id="log-run-id" min="1" placeholder="latest" type="number"/></label>
-<label>Tail <input id="log-tail" min="10" type="number" value="200"/></label>
-<button class="primary sm" id="load-logs">Load</button>
-<button class="ghost sm" id="toggle-log-stream">Stream</button>
-<span class="log-stream-status" id="log-stream-status"></span>
-<label class="chip" data-short="TS">
-<input checked="" id="log-show-timestamp" type="checkbox"/>
-<span>Timestamp</span>
-</label>
-<label class="chip" data-short="Run">
-<input id="log-show-run" type="checkbox"/>
-<span>Run</span>
-</label>
-</div>
-<div class="log-legend">
-<span class="log-legend-item"><span class="log-legend-dot thinking"></span>Thinking</span>
-<span class="log-legend-item"><span class="log-legend-dot exec"></span>Tool calls</span>
-<span class="log-legend-item"><span class="log-legend-dot file"></span>File updates</span>
-<span class="log-legend-item"><span class="log-legend-dot diff-add"></span>Added</span>
-<span class="log-legend-item"><span class="log-legend-dot diff-del"></span>Removed</span>
-<span class="log-legend-item"><span class="log-legend-dot output"></span>Agent output</span>
-<span class="log-legend-item"><span class="log-legend-dot context"></span>Context</span>
-</div>
-<div class="log-container">
-<button class="log-load-btn hidden" id="log-load-older" title="Load older logs">Load older</button>
-<pre class="log-viewer" id="log-output">(no log loaded)</pre>
-<button class="log-jump-btn hidden" id="log-jump-bottom" title="Jump to latest">↓ Latest</button>
-</div>
-</details>
+<div class="analytics-subsection" id="analytics-runs" hidden>
 </section>
 <section class="panel" id="messages">
 <div class="cards">
@@ -924,42 +690,6 @@
 </div>
 <div class="modal-actions">
 <button class="ghost" id="repo-settings-close">Close</button>
-</div>
-</div>
-</div>
-<div class="modal-overlay" hidden="" id="run-details-modal">
-<div aria-describedby="run-details-meta" aria-labelledby="run-details-title" aria-modal="true" class="modal-dialog run-details-modal" role="dialog" tabindex="-1">
-<div class="modal-header">
-<span class="label" id="run-details-title">Run</span>
-</div>
-<div class="modal-body">
-<div class="muted small" id="run-details-meta">–</div>
-<div class="run-details-grid">
-<div class="run-details-section">
-<div class="run-details-title">Completed TODOs</div>
-<div class="run-details-list" id="run-details-todos">–</div>
-</div>
-<div class="run-details-section">
-<div class="run-details-title">Token breakdown</div>
-<div class="run-details-list" id="run-details-tokens">–</div>
-</div>
-</div>
-<div class="run-details-section">
-<div class="run-details-title">Plan</div>
-<pre class="run-details-artifact" id="run-details-plan">–</pre>
-</div>
-<div class="run-details-section">
-<div class="run-details-title">Diff</div>
-<pre class="run-details-artifact" id="run-details-diff">–</pre>
-</div>
-<div class="run-details-section">
-<div class="run-details-title">Final output</div>
-<pre class="run-details-artifact" id="run-details-output">–</pre>
-</div>
-</div>
-<div class="modal-actions run-details-actions">
-<a class="ghost sm" id="run-details-log" rel="noreferrer" target="_blank">Open log</a>
-<button class="ghost" id="run-details-close">Close</button>
 </div>
 </div>
 </div>
