Remove unused image and enhance ticket chat UI with event and message history features
- Deleted the unused `image.png` file.
- Updated `index.html` to include a rich chat stream displaying agent events and message history.
- Enhanced `styles.css` to support new layout and styling for chat events and messages.
- Introduced new JavaScript functionality in `ticketChatActions.js` and `ticketChatEvents.js` to manage and render chat events and messages.
- Updated `ticketChatStream.js` to handle event streaming and integrate with the new chat features.
- Refactored `ticketEditor.js` to initialize the chat events UI and render messages upon opening the ticket editor.

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -524,7 +524,22 @@
 </div>
 </div>
 </div>
-<div class="ticket-chat-stream" id="ticket-chat-stream"></div>
+<!-- Rich Chat Stream: shows agent events and message history -->
+<div class="ticket-chat-stream" id="ticket-chat-stream">
+<!-- Agent Activity Events (thinking, tool calls, etc.) - shown during processing -->
+<div class="ticket-chat-events hidden" id="ticket-chat-events">
+<div class="ticket-chat-section-header">
+<div class="ticket-chat-section-title">
+Agent activity
+<span class="ticket-chat-count" id="ticket-chat-events-count">0</span>
+</div>
+<button class="ghost sm hidden" id="ticket-chat-events-toggle">Show more</button>
+</div>
+<div class="ticket-chat-events-list" id="ticket-chat-events-list"></div>
+</div>
+<!-- Messages History (user prompts and assistant responses) -->
+<div class="ticket-chat-messages" id="ticket-chat-messages"></div>
+</div>
 </div>
 </div>
 </div>
