--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -520,21 +520,17 @@
 </div>
 </div>
 </div>
-<!-- Rich Chat Stream: shows agent events and message history -->
+<!-- Rich Chat Stream: shows message history and agent events -->
 <div class="ticket-chat-stream" id="ticket-chat-stream">
-<!-- Agent Activity Events (thinking, tool calls, etc.) - shown during processing -->
-<div class="ticket-chat-events hidden" id="ticket-chat-events">
-<div class="ticket-chat-section-header">
-<div class="ticket-chat-section-title">
-Agent activity
-<span class="ticket-chat-count" id="ticket-chat-events-count">0</span>
-</div>
-<button class="ghost sm hidden" id="ticket-chat-events-toggle">Show more</button>
-</div>
-<div class="ticket-chat-events-list" id="ticket-chat-events-list"></div>
-</div>
 <!-- Messages History (user prompts and assistant responses) -->
 <div class="ticket-chat-messages" id="ticket-chat-messages"></div>
+<!-- Agent Activity Events (thinking, tool calls, etc.) - shown during processing -->
+<div class="ticket-chat-events hidden" id="ticket-chat-events">
+<div class="ticket-chat-events-list" id="ticket-chat-events-list"></div>
+</div>
+<!-- Hidden elements for event tracking -->
+<span class="hidden" id="ticket-chat-events-count">0</span>
+<button class="ghost sm hidden" id="ticket-chat-events-toggle">Show more</button>
 </div>
 </div>
 </div>
