Enhance ticket chat functionality with new thread management
- Added a button in `index.html` to start a new chat thread for tickets.
- Implemented `startNewTicketChatThread` function in `ticketChatActions.ts` to handle thread reset and clear message history.
- Updated `ticketChatStream.ts` to ensure UI reflects the final status of the chat.
- Integrated new thread functionality into the ticket flow in `tickets.ts` to manage user interactions effectively.

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -516,6 +516,7 @@
 </div>
 <div class="ticket-chat-meta-right">
 <button class="ghost sm hidden ticket-chat-cancel-inline" id="ticket-chat-cancel" title="Cancel">✕</button>
+<button class="ghost sm" id="ticket-chat-new-thread" title="Start a new chat thread">New thread</button>
 <span class="ticket-chat-status" id="ticket-chat-status">idle</span>
 </div>
 </div>
