Add ticket flow metrics and live output panel to UI
- Introduced new elements in `index.html` to display ticket flow metrics: turn count, elapsed time, and progress.
- Added a live output panel for agent activity with toggle functionality.
- Enhanced CSS styles for active ticket items, including animations and badges for better visibility.
- Updated TypeScript logic to manage elapsed time and ticket progress dynamically during flow execution.

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -426,8 +426,35 @@
 <span class="ticket-mono" id="ticket-flow-current">–</span>
 </div>
 <div>
+<span class="muted">Turn</span>
+<span class="ticket-mono" id="ticket-flow-turn">–</span>
+</div>
+<div>
+<span class="muted">Elapsed</span>
+<span class="ticket-mono" id="ticket-flow-elapsed">–</span>
+</div>
+<div>
+<span class="muted">Progress</span>
+<span class="ticket-mono" id="ticket-flow-progress">–</span>
+</div>
+<div>
 <span class="muted">Reason</span>
 <span class="ticket-mono ticket-flow-reason" id="ticket-flow-reason">–</span>
+</div>
+<div>
+<span class="muted">Last activity</span>
+<span class="ticket-mono" id="ticket-flow-last-activity">–</span>
+</div>
+</div>
+<!-- Live Agent Output Panel -->
+<div class="ticket-live-output-panel" id="ticket-live-output-panel">
+<div class="ticket-live-output-header" id="ticket-live-output-toggle">
+<span class="ticket-live-output-title">Live Agent Output</span>
+<span class="ticket-live-output-status" id="ticket-live-output-status">Disconnected</span>
+<button class="ghost sm icon-btn" id="ticket-live-output-expand" title="Toggle panel">▼</button>
+</div>
+<div class="ticket-live-output-content hidden" id="ticket-live-output-content">
+<pre class="ticket-live-output-text" id="ticket-live-output-text"></pre>
 </div>
 </div>
 <div class="ticket-flow-grid">
