Add flow archiving functionality and delete flow run capability
- Implemented a new endpoint to archive completed flow runs, moving associated tickets to a designated artifact directory.
- Added a method to delete flow runs and their artifacts from the database.
- Updated the UI to include an "Archive Flow" button, which is conditionally displayed based on the flow's status.
- Enhanced JavaScript logic to handle the archiving process and update the UI accordingly.

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -417,6 +417,7 @@
 <button class="primary sm" id="ticket-flow-bootstrap">Start Ticket Flow</button>
 <button class="ghost sm" id="ticket-flow-stop">Stop</button>
 <button class="ghost sm" id="ticket-flow-resume">Resume</button>
+<button class="ghost sm" id="ticket-flow-archive" style="display:none;">Archive Flow</button>
 <button class="ghost sm icon-btn" id="ticket-flow-refresh" title="Refresh ticket flow">↻</button>
 <button class="ghost sm" id="ticket-new-btn" title="Create new ticket">+ New Ticket</button>
 </div>
