Update ticket agent handling and enhance message rendering
- Replaced the special value "pause" with "user" for ticket agent identification in multiple files, including frontmatter validation and ticket processing logic.
- Refactored message rendering in both HTML and TypeScript to improve structure and accessibility, replacing `<details>` with `<div>` elements for better styling control.
- Enhanced CSS styles for the messages layout, ensuring responsive design and improved user interaction with message entries and reply boxes.

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -483,7 +483,7 @@
 <select class="ticket-fm-select" id="ticket-fm-agent" title="Agent">
 <option value="codex">codex</option>
 <option value="opencode">opencode</option>
-<option value="pause">pause</option>
+<option value="user">user</option>
 </select>
 <input class="ticket-fm-input" id="ticket-fm-title" placeholder="Title (optional)" spellcheck="false" type="text">
 <label class="ticket-fm-toggle" title="Mark as done">
